Fix contrast between background and project/social boxes

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   --border-radius: 20px;
   --transition-speed: all 0.3s ease-in-out;
   --gradient: linear-gradient(to bottom right, var(--primary-color), var(--secondary-color));
+  --dark-gradient: linear-gradient(to bottom right, #4a3a66, #2e3190);
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", 
   Helvetica, Arial, "Lucida Grande", sans-serif;
 }
@@ -129,7 +130,7 @@ main p {
 }
 
 .project-footer {
-  background: var(--gradient);;
+  background: var(--dark-gradient);;
   color: var(--light-color);
   font-size: 18px;
   padding: 10px 20px;
@@ -192,7 +193,7 @@ main p {
 }
 
 .social-label {
-  background: var(--gradient);
+  background: var(--dark-gradient);
   color: var(--light-color);
   width: 100%;
   padding: 10px 20px;
